# NifConverter

./: CMakeLists.txt  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  NifParser.cpp  NifParser.hpp  README.md  Settings.cpp  Settings.hpp  Texture.cpp  Texture.hpp  main.cpp  start.sh
include/: niflib.h
ressource/: WoodenShield.nif
src/: ResourceManager.cpp  Settings.cpp  Settings.hpp  main.cpp
src/nif/: Material.cpp  Material.hpp  NifParser.cpp  NifParser.hpp  SceneMesh.cpp  SceneMesh.hpp  SceneNode.cpp  SceneNode.hpp  SceneNodeTransform.cpp  SceneNodeTransform.hpp  Texture.cpp  Texture.hpp
src/utils/: ConverterSettings.cpp  ConverterSettings.hpp  ResourceManager.cpp  ResourceManager.hpp
